--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,17 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="api.storetests.StoreTest2" class="method navigator-link" hash-for-method="addorder">addorder</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="api.storetests.StoreTest" class="method navigator-link" hash-for-method="addorder">addorder</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="api.storetests.StoreTest2" class="method navigator-link" hash-for-method="deletepurchasebyorderid">deletepurchasebyorderid</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -118,7 +128,17 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="api.storetests.StoreTest2" class="method navigator-link" hash-for-method="findpurchasebypetid">findpurchasebypetid</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="api.storetests.StoreTest" class="method navigator-link" hash-for-method="getpetbyinventory">getpetbyinventory</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="api.storetests.StoreTest2" class="method navigator-link" hash-for-method="getpetbyinventory">getpetbyinventory</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -169,6 +189,42 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">api.storetests.StoreTest2</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="addorder">
+                  </a> <!-- addorder -->
+                  <span class="method-name">addorder</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="deletepurchasebyorderid">
+                  </a> <!-- deletepurchasebyorderid -->
+                  <span class="method-name">deletepurchasebyorderid</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="findpurchasebypetid">
+                  </a> <!-- findpurchasebypetid -->
+                  <span class="method-name">findpurchasebypetid</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="getpetbyinventory">
+                  </a> <!-- getpetbyinventory -->
+                  <span class="method-name">getpetbyinventory</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -185,6 +241,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;api.storetests.StoreTest&quot;/&gt;
+      &lt;class name=&quot;api.storetests.StoreTest2&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -198,7 +255,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">Test (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -224,28 +281,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'addorder')
 data.setCell(0, 2, 'api.storetests.StoreTest')
-data.setCell(0, 3, 3422);
+data.setCell(0, 3, 3700);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'getpetbyinventory')
-data.setCell(1, 2, 'api.storetests.StoreTest')
-data.setCell(1, 3, 1529);
+data.setCell(1, 1, 'addorder')
+data.setCell(1, 2, 'api.storetests.StoreTest2')
+data.setCell(1, 3, 1579);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'findpurchasebypetid')
-data.setCell(2, 2, 'api.storetests.StoreTest')
-data.setCell(2, 3, 1423);
+data.setCell(2, 2, 'api.storetests.StoreTest2')
+data.setCell(2, 3, 1564);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'deletepurchasebyorderid')
-data.setCell(3, 2, 'api.storetests.StoreTest')
-data.setCell(3, 3, 1319);
+data.setCell(3, 1, 'getpetbyinventory')
+data.setCell(3, 2, 'api.storetests.StoreTest2')
+data.setCell(3, 3, 1531);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'deletepurchasebyorderid')
+data.setCell(4, 2, 'api.storetests.StoreTest2')
+data.setCell(4, 3, 1471);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'deletepurchasebyorderid')
+data.setCell(5, 2, 'api.storetests.StoreTest')
+data.setCell(5, 3, 1443);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'findpurchasebypetid')
+data.setCell(6, 2, 'api.storetests.StoreTest')
+data.setCell(6, 3, 1276);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'getpetbyinventory')
+data.setCell(7, 2, 'api.storetests.StoreTest')
+data.setCell(7, 3, 1143);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -278,19 +351,42 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">addorder</span>
-                <span class="method-start">522 ms</span>
+                <span class="method-start">564 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">deletepurchasebyorderid</span>
-                <span class="method-start">3964 ms</span>
+                <span class="method-start">4279 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">findpurchasebypetid</span>
-                <span class="method-start">5290 ms</span>
+                <span class="method-start">5726 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">getpetbyinventory</span>
-                <span class="method-start">6718 ms</span>
+                <span class="method-start">7006 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">api.storetests.StoreTest2</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">beforetest</span>
+                <span class="method-start">8159 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">addorder</span>
+                <span class="method-start">8161 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">deletepurchasebyorderid</span>
+                <span class="method-start">9745 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">findpurchasebypetid</span>
+                <span class="method-start">11221 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">getpetbyinventory</span>
+                <span class="method-start">12791 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
